// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flows.flow getAll - with headers 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "authorization": "Bearer this-is-an-example-token",
    "connection": "close",
    "host": "flows.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://flows.globus.org/flows",
}
`;

exports[`flows.flow getAll - with headers and fetch overriders 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "authorization": "Bearer this-is-an-example-token",
    "connection": "close",
    "host": "flows.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
    "x-test-header": "test",
  },
  "method": "GET",
  "url": "https://flows.globus.org/flows",
}
`;

exports[`flows.flow getAll 1`] = `
{
  "headers": {
    "accept": "*/*",
    "accept-encoding": "gzip,deflate",
    "connection": "close",
    "host": "flows.globus.org",
    "user-agent": "node-fetch/1.0 (+https://github.com/bitinn/node-fetch)",
  },
  "method": "GET",
  "url": "https://flows.globus.org/flows",
}
`;
